# sf-parking-mcp

./: .dockerignore  .gitignore  CLAUDE_DESKTOP_CONFIG.md  CLOUD_DEPLOY.md  DEPLOYED.md  DEPLOYED_CLOUD_RUN.md  DEPLOYMENT.md  Dockerfile  FASTMCP_SUCCESS.md  HOSTING_REALITY.md  LICENSE  QUICKSTART.md  README.md  WEB_DEPLOY.md  fastmcp_server.py  package.json  pyproject.toml  requirements.txt  server.py  server_web.py  test_api.py  vercel.json
.github/workflows/: publish.yml
api/: index.js  index.py  mcp.js  mcp.py  sse.js  test.py
api/mcp/: index.js  message.js
